Revise README for ComposeNativeWebView
Updated project name and improved README content for clarity and structure.